# GoldScraper

./: .coveragerc  .gitignore  LICENSE  README.md  TASKS.md  env.sample  main.py  pyproject.toml  requirements.txt
scraper/: __init__.py  parser.py  scraper.py
scraper/core/: __init__.py  browser.py  config.py  headers_manager.py  proxy_manager.py  strategies.py
scraper/utils/: writer.py
tests/: test_headers.py  test_parser.py  test_scraper.py  test_writer.py
